--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
   <input type="checkbox" id="BTN" name="bank" value="BTN">
   <label for="BTN">BTN</label><br>
 
+  <p>Validate Bank</p>
+  <select id="bank" name="bank" size="3">
+    <option value="Mandiri">Mandiri</option>
+    <option value="BNI">BNI</option>
+    <option value="BCA">BCA</option>
+    <option value="BRI">BRI</option>
+    <option value="BTN">BTN</option>
+  </select>
+  
   <br><br>
   <input type="submit" value="Submit">
 </form>
