--- a/index.html
+++ b/index.html
@@ -46,6 +46,77 @@
     <option value="BTN">BTN</option>
   </select>
   
+  
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      overflow-y: scroll;
+      height: 200px;
+    }
+  
+    th, td {
+      border: 1px solid black;
+      padding: 8px;
+      text-align: left;
+    }
+  
+    th {
+      background-color: lightgray;
+    }
+  </style>
+  
+  <table>
+    <thead>
+      <tr>
+        <th>Number</th>
+        <th>Bank Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Mandiri</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>BNI</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>BCA</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>BTN</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>BRI</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>Bank 6</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Bank 7</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>Bank 8</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Bank 9</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>Bank 10</td>
+      </tr>
+    </tbody>
+  </table>
+        
   <br><br>
   <input type="submit" value="Submit">
 </form>
