--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td>Mandiri</td>
+        <td>MANDIRI</td>
       </tr>
       <tr>
         <td>2</td>
@@ -96,23 +96,23 @@
       </tr>
       <tr>
         <td>6</td>
-        <td>Bank 6</td>
+        <td>CIMB NIAGA</td>
       </tr>
       <tr>
         <td>7</td>
-        <td>Bank 7</td>
+        <td>DANAMON</td>
       </tr>
       <tr>
         <td>8</td>
-        <td>Bank 8</td>
+        <td>PERMATA</td>
       </tr>
       <tr>
         <td>9</td>
-        <td>Bank 9</td>
+        <td>PANIN</td>
       </tr>
       <tr>
         <td>10</td>
-        <td>Bank 10</td>
+        <td>MAYBANK</td>
       </tr>
     </tbody>
   </table>
@@ -121,8 +121,6 @@
   <input type="submit" value="Submit">
 </form>
 <p>Click the "Submit" button".</p>
-
-
   
 
 </body>
